--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/igorDolzh/js-atom.git"
+    "url": "https://github.com/igorDolzh/fun-task-axios"
   },
   "scripts": {
     "test": "jest",
